--- a/06-20/ajax-1.html
+++ b/06-20/ajax-1.html
@@ -10,6 +10,7 @@ Forest from the trees.
     <script src="jquery.js"></script>
   </head>
   <body style="margin: 0">
+
     <div id="map" style="position: absolute; width: 100%; height: 100%;"></div>
     <script>
     function main() {
@@ -20,6 +21,12 @@ Forest from the trees.
       });
       var geocoder = new google.maps.Geocoder();
       var city = 'Alanta, GA';
+      getWeatherInfo(city, function(data) {
+        plotMarker(myMap, data);
+      });
+    }
+
+    function getWeatherInfo(city, callback) {
       $.ajax({
         url: 'http://api.openweathermap.org/data/2.5/weather',
         method: 'GET',
@@ -29,8 +36,14 @@ Forest from the trees.
           APPID: 'eac2948bfca65b78a8c5564ecf91d00e'
         },
         success: function(data) {
+          callback(data);
+        }
+      });
+    }
+
+      function plotMarker(someMap, data) {
           var marker = new google.maps.Marker({
-            map: map,
+            map: someMap,
             position: { lat: data.coord.lat, lng: data.coord.lon },
             icon: {
               url: 'http://openweathermap.org/img/w/' + data.weather[0].icon + '.png',
@@ -38,8 +51,8 @@ Forest from the trees.
             }
           });
         }
-      });
-    }
+
+
 
     main();
     </script>
